# tkgeometry

./: CMakeLists.txt  README.md  tkgeometry.vplspec
demo/: CMakeLists.txt  demo.cpp
lib/include/tkgeometry/: tkgeometry.hpp
lib/include/tkgeometry/base/: circle.hpp  fgg.hpp  line.hpp  point.hpp  polygon.hpp  rectangle.hpp  triangle.hpp  vertex.hpp
lib/include/tkgeometry/delaunay/: delaunay.hpp
lib/include/tkgeometry/scatterplot/: scatterplot.hpp
lib/include/tkgeometry/voronoi/: voronoi.hpp
lib/src/tkgeometry/: CMakeLists.txt  tkgeometry.cpp
lib/src/tkgeometry/base/: circle.cpp  fgg.cpp  line.cpp  point.cpp  polygon.cpp  rectangle.cpp  triangle.cpp  vertex.cpp
lib/src/tkgeometry/delaunay/: delaunay.cpp
lib/src/tkgeometry/scatterplot/: scatterplot.cpp
lib/src/tkgeometry/voronoi/: voronoi.cpp
vcport/: portfile.cmake  vcpkg.json
